deployment-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-server
  namespace: application
  labels:
    app: application
    component: express-server
spec:
  selector:
    matchLabels:
      app: application
  replicas: 1
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
        - name: nginx-server
          image: nginxdemos/nginx-hello
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "128Mi"
              cpu: "64m"
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-server
  namespace: application
spec:
  selector:
    app: application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
