deployment-routeapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: route-app
  namespace: route-app
spec:
  selector:
    matchLabels:
      app: route-app
  template:
    metadata:
      labels:
        app: route-app
    spec:
      containers:
        - name: route-app
          image: nginxdemos/nginx-hello
          resources:
            limits:
              memory: "128Mi"
              cpu: "64m"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: route-app
  namespace: route-app
spec:
  selector:
    app: route-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
