httpds.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: nginx-gateway
spec:
  parentRefs:
    - name: nginx-gateway
      sectionName: harishshetty-http
  hostnames:
    - "*.harishshetty.xyz"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
